Update the color of the detached Incognito NTP bookmarks bar.

...to match the Incognito NTP background color.

Bug: 865786
Change-Id: I87c1ea80b8405c5003f4085f71019af925617f09
Reviewed-on: https://chromium-review.googlesource.com/1177395
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Martin Šrámek <msramek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583702}
Former-commit-id: 83edc233fde33fe8f3082285e36b9040c1f6bf77